@@ -67,7 +67,7 @@ This can field can also be set.
 
 sub id {
   my $self = shift;
-  my $raw = $self->_raw;
+  my $raw = $self->data;
 
   if(@_) {
     $self->dirty->{_id} = 1;
@@ -82,6 +82,10 @@ sub id {
     return $raw->{_id} = Mango::BSON::ObjectID->new;
   }
 }
+
+=head2 data
+
+Holds the raw mongodb document.
 
 =head2 in_storage
 
@@ -117,7 +121,7 @@ has _collection => sub {
   $self->connection->_storage_collection($self->model->collection_name);
 };
 
-has _raw => sub { +{} }; # raw mongodb document data
+has data => sub { +{} }; # raw mongodb document data
 
 =head1 METHODS
 
@@ -155,7 +159,7 @@ mongodb document.
 
 sub contains {
   my $self = shift;
-  $POINTER->contains($self->_raw, @_);
+  $POINTER->contains($self->data, @_);
 }
 
 =head2 get
@@ -169,7 +173,7 @@ document.
 
 sub get {
   my $self = shift;
-  $POINTER->get($self->_raw, @_);
+  $POINTER->get($self->data, @_);
 }
 
 =head2 is_changed
@@ -204,7 +208,7 @@ sub remove {
   $self->_collection->remove({ _id => $self->id }, { single => 1 }, sub {
     my($collection, $err, $doc);
     unless($err) {
-      $self->dirty->{$_} = 1 for keys %{ $self->_raw };
+      $self->dirty->{$_} = 1 for keys %{ $self->data };
       $self->in_storage(0);
     }
     $self->$cb($err);
@@ -240,8 +244,8 @@ sub save {
 
   $self->id; # make sure we have an ObjectID
 
-  warn "[$self\::save] ", Data::Dumper->new([$self->_raw])->Indent(1)->Sortkeys(1)->Terse(1)->Maxdepth(3)->Dump if DEBUG;
-  $self->_collection->save($self->_raw, sub {
+  warn "[$self\::save] ", Data::Dumper->new([$self->data])->Indent(1)->Sortkeys(1)->Terse(1)->Maxdepth(3)->Dump if DEBUG;
+  $self->_collection->save($self->data, sub {
     my($collection, $err, $doc);
     unless($err) {
       delete $self->{dirty};
@@ -265,7 +269,7 @@ die if the pointer points to non-compatible data.
 
 sub set {
   my($self, $pointer, $val) = @_;
-  my $raw = $self->_raw;
+  my $raw = $self->data;
   my(@path, $field);
 
   return $self unless $pointer =~ s!^/!!;
